--- a/examples/haskell-demo.cabal
+++ b/examples/haskell-demo.cabal
@@ -1,4 +1,4 @@
-cabal-version:      2.4
+cabal-version:      3.6
 name:               haskell-demo
 version:            0.1.0.0
 author:             Yvan Sraka
@@ -6,7 +6,7 @@ maintainer:         yvan@sraka.xyz
 
 executable haskell-demo
     main-is:          Main.hs
-    build-depends:    base ^>=4.14.3.0
+    build-depends:    base
     hs-source-dirs:   app
     default-language: Haskell2010
     -- We tell GHC linker where to find the `libhello.a`
